fix upload image vertical spacing

--- a/packages/front-end/components/EditExperiment/ScreenshotUpload.module.scss
+++ b/packages/front-end/components/EditExperiment/ScreenshotUpload.module.scss
@@ -5,6 +5,10 @@
   position: relative;
   width: 100%;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
 
   .message {
     display: none;
